7TP/parser.automaton
State 0:
prog' -> . prog [ # ]
-- On WHILE shift to state 1
-- On VAR shift to state 64
-- On RETURN shift to state 70
-- On PRINT shift to state 73
-- On NOT shift to state 2
-- On NEWLINE shift to state 76
-- On MINUS shift to state 3
-- On LPAREN shift to state 4
-- On INT shift to state 5
-- On IF shift to state 78
-- On IDENT shift to state 84
-- On FUN shift to state 88
-- On FOR shift to state 101
-- On EXIT shift to state 108
-- On CONST_INT shift to state 9
-- On CONST_BOOL shift to state 10
-- On BOOL shift to state 11
-- On BEGIN shift to state 63
-- On typ shift to state 12
-- On prog shift to state 123
-- On list(instr) shift to state 124
-- On instr shift to state 112
-- On field_expr shift to state 114
-- On expr shift to state 118
-- On const shift to state 32
-- On call shift to state 119
-- On block shift to state 121
-- On EOF reduce production list(instr) -> 

State 1:
instr -> WHILE . expr block [ WHILE VAR RETURN PRINT NOT NEWLINE MINUS LPAREN INT IF IDENT FUN FOR EXIT EOF END CONST_INT CONST_BOOL BOOL BEGIN ]
-- On NOT shift to state 2
-- On MINUS shift to state 3
-- On LPAREN shift to state 4
-- On INT shift to state 5
-- On IF shift to state 6
-- On IDENT shift to state 7
-- On CONST_INT shift to state 9
-- On CONST_BOOL shift to state 10
-- On BOOL shift to state 11
-- On typ shift to state 12
-- On field_expr shift to state 14
-- On expr shift to state 62
-- On const shift to state 32
-- On call shift to state 33

State 2:
expr -> NOT . expr [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
-- On NOT shift to state 2
-- On MINUS shift to state 3
-- On LPAREN shift to state 4
-- On INT shift to state 5
-- On IF shift to state 6
-- On IDENT shift to state 7
-- On CONST_INT shift to state 9
-- On CONST_BOOL shift to state 10
-- On BOOL shift to state 11
-- On typ shift to state 12
-- On field_expr shift to state 14
-- On expr shift to state 61
-- On const shift to state 32
-- On call shift to state 33

State 3:
expr -> MINUS . expr [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
-- On NOT shift to state 2
-- On MINUS shift to state 3
-- On LPAREN shift to state 4
-- On INT shift to state 5
-- On IF shift to state 6
-- On IDENT shift to state 7
-- On CONST_INT shift to state 9
-- On CONST_BOOL shift to state 10
-- On BOOL shift to state 11
-- On typ shift to state 12
-- On field_expr shift to state 14
-- On expr shift to state 60
-- On const shift to state 32
-- On call shift to state 33

State 4:
expr -> LPAREN . expr RPAREN [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
-- On NOT shift to state 2
-- On MINUS shift to state 3
-- On LPAREN shift to state 4
-- On INT shift to state 5
-- On IF shift to state 6
-- On IDENT shift to state 7
-- On CONST_INT shift to state 9
-- On CONST_BOOL shift to state 10
-- On BOOL shift to state 11
-- On typ shift to state 12
-- On field_expr shift to state 14
-- On expr shift to state 58
-- On const shift to state 32
-- On call shift to state 33

State 5:
typ -> INT . [ SEMI RPAREN LBRACKET COMMA BEGIN ARRAY ]
-- On SEMI reduce production typ -> INT 
-- On RPAREN reduce production typ -> INT 
-- On LBRACKET reduce production typ -> INT 
-- On COMMA reduce production typ -> INT 
-- On BEGIN reduce production typ -> INT 
-- On ARRAY reduce production typ -> INT 

State 6:
expr -> IF . expr THEN expr ELSE expr [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
-- On NOT shift to state 2
-- On MINUS shift to state 3
-- On LPAREN shift to state 4
-- On INT shift to state 5
-- On IF shift to state 6
-- On IDENT shift to state 7
-- On CONST_INT shift to state 9
-- On CONST_BOOL shift to state 10
-- On BOOL shift to state 11
-- On typ shift to state 12
-- On field_expr shift to state 14
-- On expr shift to state 53
-- On const shift to state 32
-- On call shift to state 33

State 7:
call -> IDENT . LPAREN loption(separated_nonempty_list(COMMA,expr)) RPAREN [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
expr -> IDENT . [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
-- On LPAREN shift to state 8
-- On TO reduce production expr -> IDENT 
-- On THEN reduce production expr -> IDENT 
-- On SEMI reduce production expr -> IDENT 
-- On RPAREN reduce production expr -> IDENT 
-- On RBRACKET reduce production expr -> IDENT 
-- On PLUS reduce production expr -> IDENT 
-- On OR reduce production expr -> IDENT 
-- On NEQ reduce production expr -> IDENT 
-- On MULT reduce production expr -> IDENT 
-- On MINUS reduce production expr -> IDENT 
-- On LT reduce production expr -> IDENT 
-- On LE reduce production expr -> IDENT 
-- On LBRACKET reduce production expr -> IDENT 
-- On GT reduce production expr -> IDENT 
-- On GE reduce production expr -> IDENT 
-- On EQ reduce production expr -> IDENT 
-- On ELSE reduce production expr -> IDENT 
-- On DIV reduce production expr -> IDENT 
-- On COMMA reduce production expr -> IDENT 
-- On BEGIN reduce production expr -> IDENT 
-- On AND reduce production expr -> IDENT 

State 8:
call -> IDENT LPAREN . loption(separated_nonempty_list(COMMA,expr)) RPAREN [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
-- On NOT shift to state 2
-- On MINUS shift to state 3
-- On LPAREN shift to state 4
-- On INT shift to state 5
-- On IF shift to state 6
-- On IDENT shift to state 7
-- On CONST_INT shift to state 9
-- On CONST_BOOL shift to state 10
-- On BOOL shift to state 11
-- On typ shift to state 12
-- On separated_nonempty_list(COMMA,expr) shift to state 47
-- On loption(separated_nonempty_list(COMMA,expr)) shift to state 48
-- On field_expr shift to state 14
-- On expr shift to state 50
-- On const shift to state 32
-- On call shift to state 33
-- On RPAREN reduce production loption(separated_nonempty_list(COMMA,expr)) -> 

State 9:
const -> CONST_INT . [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
-- On TO reduce production const -> CONST_INT 
-- On THEN reduce production const -> CONST_INT 
-- On SEMI reduce production const -> CONST_INT 
-- On RPAREN reduce production const -> CONST_INT 
-- On RBRACKET reduce production const -> CONST_INT 
-- On PLUS reduce production const -> CONST_INT 
-- On OR reduce production const -> CONST_INT 
-- On NEQ reduce production const -> CONST_INT 
-- On MULT reduce production const -> CONST_INT 
-- On MINUS reduce production const -> CONST_INT 
-- On LT reduce production const -> CONST_INT 
-- On LE reduce production const -> CONST_INT 
-- On LBRACKET reduce production const -> CONST_INT 
-- On GT reduce production const -> CONST_INT 
-- On GE reduce production const -> CONST_INT 
-- On EQ reduce production const -> CONST_INT 
-- On ELSE reduce production const -> CONST_INT 
-- On DIV reduce production const -> CONST_INT 
-- On COMMA reduce production const -> CONST_INT 
-- On BEGIN reduce production const -> CONST_INT 
-- On AND reduce production const -> CONST_INT 

State 10:
const -> CONST_BOOL . [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
-- On TO reduce production const -> CONST_BOOL 
-- On THEN reduce production const -> CONST_BOOL 
-- On SEMI reduce production const -> CONST_BOOL 
-- On RPAREN reduce production const -> CONST_BOOL 
-- On RBRACKET reduce production const -> CONST_BOOL 
-- On PLUS reduce production const -> CONST_BOOL 
-- On OR reduce production const -> CONST_BOOL 
-- On NEQ reduce production const -> CONST_BOOL 
-- On MULT reduce production const -> CONST_BOOL 
-- On MINUS reduce production const -> CONST_BOOL 
-- On LT reduce production const -> CONST_BOOL 
-- On LE reduce production const -> CONST_BOOL 
-- On LBRACKET reduce production const -> CONST_BOOL 
-- On GT reduce production const -> CONST_BOOL 
-- On GE reduce production const -> CONST_BOOL 
-- On EQ reduce production const -> CONST_BOOL 
-- On ELSE reduce production const -> CONST_BOOL 
-- On DIV reduce production const -> CONST_BOOL 
-- On COMMA reduce production const -> CONST_BOOL 
-- On BEGIN reduce production const -> CONST_BOOL 
-- On AND reduce production const -> CONST_BOOL 

State 11:
typ -> BOOL . [ SEMI RPAREN LBRACKET COMMA BEGIN ARRAY ]
-- On SEMI reduce production typ -> BOOL 
-- On RPAREN reduce production typ -> BOOL 
-- On LBRACKET reduce production typ -> BOOL 
-- On COMMA reduce production typ -> BOOL 
-- On BEGIN reduce production typ -> BOOL 
-- On ARRAY reduce production typ -> BOOL 

State 12:
expr -> typ . LBRACKET expr RBRACKET [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
typ -> typ . ARRAY [ LBRACKET ARRAY ]
-- On LBRACKET shift to state 13
-- On ARRAY shift to state 46

State 13:
expr -> typ LBRACKET . expr RBRACKET [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
-- On NOT shift to state 2
-- On MINUS shift to state 3
-- On LPAREN shift to state 4
-- On INT shift to state 5
-- On IF shift to state 6
-- On IDENT shift to state 7
-- On CONST_INT shift to state 9
-- On CONST_BOOL shift to state 10
-- On BOOL shift to state 11
-- On typ shift to state 12
-- On field_expr shift to state 14
-- On expr shift to state 15
-- On const shift to state 32
-- On call shift to state 33

State 14:
expr -> field_expr . [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
-- On TO reduce production expr -> field_expr 
-- On THEN reduce production expr -> field_expr 
-- On SEMI reduce production expr -> field_expr 
-- On RPAREN reduce production expr -> field_expr 
-- On RBRACKET reduce production expr -> field_expr 
-- On PLUS reduce production expr -> field_expr 
-- On OR reduce production expr -> field_expr 
-- On NEQ reduce production expr -> field_expr 
-- On MULT reduce production expr -> field_expr 
-- On MINUS reduce production expr -> field_expr 
-- On LT reduce production expr -> field_expr 
-- On LE reduce production expr -> field_expr 
-- On LBRACKET reduce production expr -> field_expr 
-- On GT reduce production expr -> field_expr 
-- On GE reduce production expr -> field_expr 
-- On EQ reduce production expr -> field_expr 
-- On ELSE reduce production expr -> field_expr 
-- On DIV reduce production expr -> field_expr 
-- On COMMA reduce production expr -> field_expr 
-- On BEGIN reduce production expr -> field_expr 
-- On AND reduce production expr -> field_expr 

State 15:
expr -> expr . PLUS expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
expr -> expr . MINUS expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
expr -> expr . MULT expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
expr -> expr . DIV expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
expr -> expr . AND expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
expr -> expr . OR expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
expr -> expr . EQ expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
expr -> expr . NEQ expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
expr -> expr . LT expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
expr -> expr . LE expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
expr -> expr . GT expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
expr -> expr . GE expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
expr -> typ LBRACKET expr . RBRACKET [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
field_expr -> expr . LBRACKET expr RBRACKET [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
-- On RBRACKET shift to state 16
-- On PLUS shift to state 17
-- On OR shift to state 24
-- On NEQ shift to state 26
-- On MULT shift to state 19
-- On MINUS shift to state 28
-- On LT shift to state 34
-- On LE shift to state 36
-- On LBRACKET shift to state 21
-- On GT shift to state 38
-- On GE shift to state 40
-- On EQ shift to state 42
-- On DIV shift to state 30
-- On AND shift to state 44

State 16:
expr -> typ LBRACKET expr RBRACKET . [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
-- On TO reduce production expr -> typ LBRACKET expr RBRACKET 
-- On THEN reduce production expr -> typ LBRACKET expr RBRACKET 
-- On SEMI reduce production expr -> typ LBRACKET expr RBRACKET 
-- On RPAREN reduce production expr -> typ LBRACKET expr RBRACKET 
-- On RBRACKET reduce production expr -> typ LBRACKET expr RBRACKET 
-- On PLUS reduce production expr -> typ LBRACKET expr RBRACKET 
-- On OR reduce production expr -> typ LBRACKET expr RBRACKET 
-- On NEQ reduce production expr -> typ LBRACKET expr RBRACKET 
-- On MULT reduce production expr -> typ LBRACKET expr RBRACKET 
-- On MINUS reduce production expr -> typ LBRACKET expr RBRACKET 
-- On LT reduce production expr -> typ LBRACKET expr RBRACKET 
-- On LE reduce production expr -> typ LBRACKET expr RBRACKET 
-- On LBRACKET reduce production expr -> typ LBRACKET expr RBRACKET 
-- On GT reduce production expr -> typ LBRACKET expr RBRACKET 
-- On GE reduce production expr -> typ LBRACKET expr RBRACKET 
-- On EQ reduce production expr -> typ LBRACKET expr RBRACKET 
-- On ELSE reduce production expr -> typ LBRACKET expr RBRACKET 
-- On DIV reduce production expr -> typ LBRACKET expr RBRACKET 
-- On COMMA reduce production expr -> typ LBRACKET expr RBRACKET 
-- On BEGIN reduce production expr -> typ LBRACKET expr RBRACKET 
-- On AND reduce production expr -> typ LBRACKET expr RBRACKET 

State 17:
expr -> expr PLUS . expr [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
-- On NOT shift to state 2
-- On MINUS shift to state 3
-- On LPAREN shift to state 4
-- On INT shift to state 5
-- On IF shift to state 6
-- On IDENT shift to state 7
-- On CONST_INT shift to state 9
-- On CONST_BOOL shift to state 10
-- On BOOL shift to state 11
-- On typ shift to state 12
-- On field_expr shift to state 14
-- On expr shift to state 18
-- On const shift to state 32
-- On call shift to state 33

State 18:
expr -> expr . PLUS expr [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
expr -> expr PLUS expr . [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
expr -> expr . MINUS expr [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
expr -> expr . MULT expr [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
expr -> expr . DIV expr [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
expr -> expr . AND expr [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
expr -> expr . OR expr [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
expr -> expr . EQ expr [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
expr -> expr . NEQ expr [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
expr -> expr . LT expr [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
expr -> expr . LE expr [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
expr -> expr . GT expr [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
expr -> expr . GE expr [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
field_expr -> expr . LBRACKET expr RBRACKET [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
-- On MULT shift to state 19
-- On LBRACKET shift to state 21
-- On DIV shift to state 30
-- On TO reduce production expr -> expr PLUS expr 
-- On THEN reduce production expr -> expr PLUS expr 
-- On SEMI reduce production expr -> expr PLUS expr 
-- On RPAREN reduce production expr -> expr PLUS expr 
-- On RBRACKET reduce production expr -> expr PLUS expr 
-- On PLUS reduce production expr -> expr PLUS expr 
-- On OR reduce production expr -> expr PLUS expr 
-- On NEQ reduce production expr -> expr PLUS expr 
-- On MINUS reduce production expr -> expr PLUS expr 
-- On LT reduce production expr -> expr PLUS expr 
-- On LE reduce production expr -> expr PLUS expr 
-- On GT reduce production expr -> expr PLUS expr 
-- On GE reduce production expr -> expr PLUS expr 
-- On EQ reduce production expr -> expr PLUS expr 
-- On ELSE reduce production expr -> expr PLUS expr 
-- On COMMA reduce production expr -> expr PLUS expr 
-- On BEGIN reduce production expr -> expr PLUS expr 
-- On AND reduce production expr -> expr PLUS expr 

State 19:
expr -> expr MULT . expr [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
-- On NOT shift to state 2
-- On MINUS shift to state 3
-- On LPAREN shift to state 4
-- On INT shift to state 5
-- On IF shift to state 6
-- On IDENT shift to state 7
-- On CONST_INT shift to state 9
-- On CONST_BOOL shift to state 10
-- On BOOL shift to state 11
-- On typ shift to state 12
-- On field_expr shift to state 14
-- On expr shift to state 20
-- On const shift to state 32
-- On call shift to state 33

State 20:
expr -> expr . PLUS expr [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
expr -> expr . MINUS expr [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
expr -> expr . MULT expr [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
expr -> expr MULT expr . [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
expr -> expr . DIV expr [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
expr -> expr . AND expr [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
expr -> expr . OR expr [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
expr -> expr . EQ expr [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
expr -> expr . NEQ expr [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
expr -> expr . LT expr [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
expr -> expr . LE expr [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
expr -> expr . GT expr [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
expr -> expr . GE expr [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
field_expr -> expr . LBRACKET expr RBRACKET [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
-- On LBRACKET shift to state 21
-- On TO reduce production expr -> expr MULT expr 
-- On THEN reduce production expr -> expr MULT expr 
-- On SEMI reduce production expr -> expr MULT expr 
-- On RPAREN reduce production expr -> expr MULT expr 
-- On RBRACKET reduce production expr -> expr MULT expr 
-- On PLUS reduce production expr -> expr MULT expr 
-- On OR reduce production expr -> expr MULT expr 
-- On NEQ reduce production expr -> expr MULT expr 
-- On MULT reduce production expr -> expr MULT expr 
-- On MINUS reduce production expr -> expr MULT expr 
-- On LT reduce production expr -> expr MULT expr 
-- On LE reduce production expr -> expr MULT expr 
-- On GT reduce production expr -> expr MULT expr 
-- On GE reduce production expr -> expr MULT expr 
-- On EQ reduce production expr -> expr MULT expr 
-- On ELSE reduce production expr -> expr MULT expr 
-- On DIV reduce production expr -> expr MULT expr 
-- On COMMA reduce production expr -> expr MULT expr 
-- On BEGIN reduce production expr -> expr MULT expr 
-- On AND reduce production expr -> expr MULT expr 

State 21:
field_expr -> expr LBRACKET . expr RBRACKET [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN ASSIGN AND ]
-- On NOT shift to state 2
-- On MINUS shift to state 3
-- On LPAREN shift to state 4
-- On INT shift to state 5
-- On IF shift to state 6
-- On IDENT shift to state 7
-- On CONST_INT shift to state 9
-- On CONST_BOOL shift to state 10
-- On BOOL shift to state 11
-- On typ shift to state 12
-- On field_expr shift to state 14
-- On expr shift to state 22
-- On const shift to state 32
-- On call shift to state 33

State 22:
expr -> expr . PLUS expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
expr -> expr . MINUS expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
expr -> expr . MULT expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
expr -> expr . DIV expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
expr -> expr . AND expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
expr -> expr . OR expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
expr -> expr . EQ expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
expr -> expr . NEQ expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
expr -> expr . LT expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
expr -> expr . LE expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
expr -> expr . GT expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
expr -> expr . GE expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
field_expr -> expr . LBRACKET expr RBRACKET [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
field_expr -> expr LBRACKET expr . RBRACKET [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN ASSIGN AND ]
-- On RBRACKET shift to state 23
-- On PLUS shift to state 17
-- On OR shift to state 24
-- On NEQ shift to state 26
-- On MULT shift to state 19
-- On MINUS shift to state 28
-- On LT shift to state 34
-- On LE shift to state 36
-- On LBRACKET shift to state 21
-- On GT shift to state 38
-- On GE shift to state 40
-- On EQ shift to state 42
-- On DIV shift to state 30
-- On AND shift to state 44

State 23:
field_expr -> expr LBRACKET expr RBRACKET . [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN ASSIGN AND ]
-- On TO reduce production field_expr -> expr LBRACKET expr RBRACKET 
-- On THEN reduce production field_expr -> expr LBRACKET expr RBRACKET 
-- On SEMI reduce production field_expr -> expr LBRACKET expr RBRACKET 
-- On RPAREN reduce production field_expr -> expr LBRACKET expr RBRACKET 
-- On RBRACKET reduce production field_expr -> expr LBRACKET expr RBRACKET 
-- On PLUS reduce production field_expr -> expr LBRACKET expr RBRACKET 
-- On OR reduce production field_expr -> expr LBRACKET expr RBRACKET 
-- On NEQ reduce production field_expr -> expr LBRACKET expr RBRACKET 
-- On MULT reduce production field_expr -> expr LBRACKET expr RBRACKET 
-- On MINUS reduce production field_expr -> expr LBRACKET expr RBRACKET 
-- On LT reduce production field_expr -> expr LBRACKET expr RBRACKET 
-- On LE reduce production field_expr -> expr LBRACKET expr RBRACKET 
-- On LBRACKET reduce production field_expr -> expr LBRACKET expr RBRACKET 
-- On GT reduce production field_expr -> expr LBRACKET expr RBRACKET 
-- On GE reduce production field_expr -> expr LBRACKET expr RBRACKET 
-- On EQ reduce production field_expr -> expr LBRACKET expr RBRACKET 
-- On ELSE reduce production field_expr -> expr LBRACKET expr RBRACKET 
-- On DIV reduce production field_expr -> expr LBRACKET expr RBRACKET 
-- On COMMA reduce production field_expr -> expr LBRACKET expr RBRACKET 
-- On BEGIN reduce production field_expr -> expr LBRACKET expr RBRACKET 
-- On ASSIGN reduce production field_expr -> expr LBRACKET expr RBRACKET 
-- On AND reduce production field_expr -> expr LBRACKET expr RBRACKET 

State 24:
expr -> expr OR . expr [ TO THEN SEMI RPAREN RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ ELSE DIV COMMA BEGIN AND ]
-- On NOT shift to state 2
-- On MINUS shift to state 3
-- On LPAREN shift to state 4
-- On INT shift to state 5
-- On IF shift to state 6
-- On IDENT shift to state 7
-- On CONST_INT shift to state 9
-- On CONST_BOOL shift to state 10
-- On BOOL shift to state 11
-- On typ shift to state 12
-- On field_expr shift to state 14
-- On expr shift to state 25
-- On const shift to state 32
-- On call shift to state 33
